@@ -6,6 +6,7 @@ pre-1.8.0
      - Fix link tags with rel set to stylesheets via Mend and Mend and Prettify that are missing type
      - Fix GoToLinkOrStyle to work on css link tags in head
      - Fix logic in GoToLinkOrStyle to better identify the actual target with styles
+     - Fix insert media file when cursor at very start of tag
 
     New Features:
      - BookBrowser can now link javascripts similarly to how it links stylesheets
@@ -13,7 +14,8 @@ pre-1.8.0
      - Add Find and Replace context menu to clear its curent values and history
      - Add support for 3 Automation lists that support editing and automatically running a list of
          commands that can include all Sigil plugins and a limited set of Tools
-         
+     - Add support for BookBrowser to insert a blank javascript file
+
 
 Sigil-1.7.0
     Bug Fixes
